backend/k8s/be-auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kareer-user
  namespace: backend
  labels:
    app: kareer-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kareer-user
  template:
    metadata:
      labels:
        app: kareer-user
    spec:
      containers:
        - name: kareer-user
          image: sudo21/kareer:be-user-1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      restartPolicy: Always
