backend/k8s/kareer-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kareer-user
  namespace: backend
spec:
  selector:
    app: kareer-user
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
